<resources>
    <string name="app_name">NomNomFood</string>
    <string name="slogan">We\'ll feed you,\nno matter where you are</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, %s</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_menu">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="prefillPhone">0895195632</string>
    <string name="prefillPass">Pasta3!</string>
    <string name="ph_name_of_food">Food Name</string>
    <string name="ph_name_of_menu">Menu Item Name</string>
    <string name="ph_food_price">15.95</string>
    <string name="ph_food_description">Food Description</string>
    <string name="btn_place_order">Place Order</string>
</resources>