<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".SignIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <EditText
            android:id="@+id/edtPhone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="0895195632"
            android:textColor="@android:color/white"
            android:textSize="34sp" />
        <!--
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="11"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"
        />
        -->

        <EditText
            android:id="@+id/edtName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="Ivan Petrov"
            android:textColor="@android:color/white"
            android:textSize="34sp" />
        <!--
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"
        />
        -->

        <EditText
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:text="Ivan Petrov"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="textPassword" />
        <!--
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="16"
        app:met_primaryColor="@android:color/white"
        app:met_singleLineEllipsis="true"
        />
        -->

    </LinearLayout>

    <!--<info.hoang8f.widget.FButton -->
    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/btnSignUp"
        />
    <!--
    app:buttonColor="@color/btnSignUp"
    app:shadowColor="@android:color/black"
    app:shadowEnabled="true"
    app:shadowHeight="5dp"
    app:cornerRadius="4dp"
    />
    -->

</RelativeLayout>